# spmc_py

./: .gitignore  README.md  main.py  profile_main.py  pyproject.toml
src/: spmc_py.pyi  spmc_py.pyx
